--- a/src/pages/contacto/Contacto.css
+++ b/src/pages/contacto/Contacto.css
@@ -18,6 +18,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+.contact-instructin-message {
+  font-weight: 500;
+}
 
 .contact-form {
   max-width: 600px;
@@ -75,4 +78,9 @@
   text-align: center; /* Centers the error message */
   font-size: 1rem; /* Sets the font size for the error message */
   color: #dc3545; /* Sets the text color to red for errors */
+}
+.contact-form ::placeholder {
+  font-size: 0.8rem;
+  color: grey;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
