--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -16,10 +16,11 @@ body {
   align-items: center;
   padding: 15px;
   font-weight: bold;
-  background-color: rgb(255, 255, 255); /* Sets a red background */
-  position: fixed; /* Fix navbar at the top */
+  background-color: rgb(255, 255, 255);
+  position: fixed;
   top: 0;
   left: 0;
+  right: 0;
   width: 100%;
   z-index: 1000;
   transition: transform 0.3s ease-in-out; /* Smooth transition for hide/show effect */
