--- a/src/pages/equipas/eqCard/EqCard.css
+++ b/src/pages/equipas/eqCard/EqCard.css
@@ -5,15 +5,15 @@
 }
 .eqcard {
   display: flex;
-  border: 3px solid red;
+  border: 3px solid rgb(217, 255, 0);
   border-radius: 8px;
   flex-direction: column;
   justify-content: center; /**/
   width: 250px;
-  background-color: rgb(28, 154, 238);
+  background-color: rgb(150, 153, 150);
   overflow: hidden;
   text-align: center;
-  transition: transform 0.5s ease;
+  transition: transform 200ms ease;
   box-shadow: 0 4px 6px black;
 }
 .eqcard img {
