--- a/src/pages/inicio/Inicio.css
+++ b/src/pages/inicio/Inicio.css
@@ -1,16 +1,14 @@
-* {
+*,
+::before,
+::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 .inicio {
-  height: auto;
-  background-color: aliceblue;
-  /* background-color: url(../../assets/images/golden-ball.png);*/
-  /* background-size: cover;
-  background-position: center;
- */
+  min-height: 100vh;
+  background-color: rgb(53, 61, 68);
 }
 .inicio h1 {
   display: inline-flex;
@@ -31,13 +29,15 @@
 .website-logo {
   display: flex;
   border-radius: 10px;
-  border: 5px solid red;
+  border: 3px solid rgb(255, 255, 255);
   width: 80vw;
   height: 60vh;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
   background-image: url(../../assets/images/stadium-4760441_1920.jpg);
+  background-size: cover;
+  background-position: center;
 }
 .website-logo img {
   width: auto;
@@ -57,6 +57,7 @@
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
   margin: 0.3rem;
+  margin-block: 5rem;
 }
 
 .assists-table-container-partial {
@@ -70,6 +71,7 @@
 fieldset {
   border-radius: 5px;
   border: 2px solid rgb(255, 255, 255);
+  margin-block: 50rem;
 }
 button {
   color: white;
