--- a/src/pages/sobre/Sobre.css
+++ b/src/pages/sobre/Sobre.css
@@ -1,5 +1,5 @@
 .sobre-container {
-  min-height: 60vh;
+  min-height: 70vh;
 }
 .sobre-container h1 {
   width: 60vw;
@@ -50,7 +50,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 1rem;
+  margin-block: 1rem;
 }
 
 .sobre-container-text img {
