--- a/src/pages/sobre/Sobre.css
+++ b/src/pages/sobre/Sobre.css
@@ -50,7 +50,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-block: 1rem;
+  margin-top: 1rem;
 }
 
 .sobre-container-text img {
