minor modifications on the EqCard, and redifined the var for the min-height of the pages

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ code {
 }
 
 :root {
-  /*--page-min-height: 100vh;*/ /*still unused*/
+  --page-min-height: 100vh;
 
   /*colors*/
   --dark: #000000;
