--- a/src/pages/Inscricao/Inscricao.css
+++ b/src/pages/Inscricao/Inscricao.css
@@ -50,7 +50,7 @@
   justify-content: center;
   align-items: center;
 
-  background-color: rgb(57, 117, 45);
+  background-color: rgb(99, 199, 199);
 }
 
 .create-container {
@@ -62,7 +62,7 @@
   max-width: 37.5rem;
   margin-block: 1rem;
 
-  background-color: #f9f9f9;
+  background-color: #f9f9f9; /*******/
 }
 
 .create-title {
@@ -86,7 +86,7 @@
   flex-direction: column;
   gap: 7px;
 
-  background-color: rgb(85, 166, 190); /******/
+  background-color: rgb(216, 85, 172); /******/
 }
 .create-account-form .input-group label {
   color: var(--light);
