--- a/src/pages/equipas/Equipas.css
+++ b/src/pages/equipas/Equipas.css
@@ -1,15 +1,14 @@
 .equipas-container {
   min-height: var(--page-min-height);
   padding-bottom: 50px;
-  padding-inline: 1rem;
+  padding-inline: var(--page-padding-inline);
 
-  background-color: rgb(113, 211, 118); /********/
+  background-color: rgb(173, 19, 219); /*undecided*/
 }
 
 .teams-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  gap: 1.2rem;
-  grid-auto-rows: minmax(75px, auto);
-  justify-content: center;
+  grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
+  gap: 2rem;
+  grid-auto-rows: minmax(100px, auto);
 }
