--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -58,3 +58,119 @@ tr img {
 /*extra extra large*/
 @media (min-width: 1400px) {
 }
+
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+body {
+
+*/
+.sample-table-container {
+  min-height: 100vh;
+  background: url(../../assets/images/teams/bruschetta-50.webp) center / cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+main.table {
+  width: 82vw; /*?*/
+  height: 90vh; /*?*/
+  background-color: #fff5;
+  backdrop-filter: blur(7px);
+  box-shadow: 0 0.4rem 0.8rem #0005;
+  border-radius: 0.8rem;
+  overflow: hidden;
+}
+.table_header {
+  width: 100%;
+  height: 10%;
+  background-color: #fff4;
+  padding: 0.8rem 1rem;
+}
+
+.table_body {
+  width: 95%;
+  max-height: calc(89% - 1.6rem);
+  background-color: #fffb;
+  margin: 0.8rem auto;
+  border-radius: 0.6rem;
+  overflow: auto; /*scroll bar*/
+}
+.table_body::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.5rem;
+}
+.table_body::-webkit-scrollbar-thumb {
+  border-radius: 0.5rem;
+  background-color: #0004;
+  visibility: hidden;
+}
+.table_body:hover::-webkit-scrollbar-thumb {
+  visibility: visible;
+}
+table {
+  width: 100%;
+}
+thead,
+th {
+  position: sticky;
+  top: 0;
+  left: 0;
+  background-color: #d5d1defe;
+}
+table,
+th,
+td {
+  padding: 1rem;
+  border-collapse: collapse;
+  text-align: left;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #0000000b;
+}
+
+tbody tr:hover {
+  background-color: #fff6;
+}
+td img {
+  width: 36px;
+  height: 36px;
+  margin-right: 0.5rem; /*??*/
+  border-radius: 50%;
+  vertical-align: middle; /*?*/
+}
+.status {
+  padding: 0.4rem 0;
+  border-radius: 2rem;
+  text-align: center;
+}
+.status.delivered {
+  background-color: #86e49d;
+  color: #006b21;
+}
+
+.status.cancelled {
+  background-color: #d893a3;
+  color: #b30021;
+}
+
+.status.pending {
+  background-color: #ebc473;
+  /* color: #b30021; */
+}
+
+.status.shipped {
+  background-color: #6fcaea;
+  /* color: #b30021; */
+}
+
+@media (max-width: 1000px) {
+  td:not(:first-of-type) {
+    min-width: 12.1rem;
+  }
+}
