--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -3,6 +3,8 @@
   margin-bottom: 50px;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
+
+  background-color: red; /*for commit*/
 }
 
 .jogadores-table {
